# Startup-Burnrate-Model

./: .gitignore  README.md
runwayos/: Makefile  README.md
runwayos/backend/: README.md  pyproject.toml
runwayos/backend/scripts/: demo_payloads.py
runwayos/backend/src/runwayos/: __init__.py  app.py  schemas.py  state.py
runwayos/backend/src/runwayos/sim/: __init__.py  engine.py  policy.py  scenarios.py
runwayos/backend/src/runwayos/utils/: __init__.py  stats.py
runwayos/backend/tests/: test_api.py  test_engine.py  test_policy.py
runwayos/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
runwayos/frontend/app/: globals.css  layout.tsx  page.tsx
runwayos/frontend/components/: FanChart.tsx  PolicyForm.tsx  ProjectsEditor.tsx  RaiseAmountTradeoffChart.tsx  ResultsPanel.tsx  RuinCurveChart.tsx  ScenarioCompareTable.tsx  ScenarioEditor.tsx  StartupForm.tsx
runwayos/frontend/lib/: api.ts
